[package]
name = "gtp-parser-generator"
version = "0.1.0"
authors = ["Igor Polyakov <iopguy@gmail.com>"]
repository = "https://github.com/iopq/gtp-parser-generator"
license = "MIT/Apache-2.0"
description = "Generates a parser for Go Text Protocol using a DSL that allows defining custom commands"

[dependencies]
pom = "1.0.1"
error-chain = "0.10.0"